@@ -2,9 +2,9 @@ char *fake = N_("Compose two functions");
 char *fake = N_("Compose a function with itself n times, passing x as argument, and returning x if n == 0");
 char *fake = N_("Print a table of values for f(n) for numbers from vector v, or if v is a number for integers from 1 to v");
 char *fake = N_("Make a string");
-char *fake = N_("Tolerance for AdaptiveGaussKronrodAbsoluteTolerance");
-char *fake = N_("Maximum number of iterations to Tolerance to perform in NumericalIntegral");
-char *fake = N_("Tolerance for AdaptiveGaussKronrodRelativeTolerance");
+char *fake = N_("Absolute tolerance for AdaptiveGaussKronrod, error should be less than this");
+char *fake = N_("Maximum number of iterations to perform in AdaptiveGaussKronrod");
+char *fake = N_("Relative tolerance for AdaptiveGaussKronrod, error should be less than this times the estimated value");
 char *fake = N_("Tolerance of the Chop function");
 char *fake = N_("How many iterations to try to find the limit for continuity and limits");
 char *fake = N_("How many successive steps to be within tolerance for calculation of continuity");
@@ -15,7 +15,7 @@ char *fake = N_("Tolerance for calculating the derivatives of functions");
 char *fake = N_("Tolerance of the ErrorFunction (used for complex values only)");
 char *fake = N_("Tolerance of the GaussDistribution function");
 char *fake = N_("The function used for numerical integration in NumericalIntegral (by default AdaptiveGaussKronrod)");
-char *fake = N_("Steps to perform in NumericalIntegral");
+char *fake = N_("Default number of steps to perform in MidpointRule, TrapezoidRule, LeftHandRule, RightHandRule, and CompositeSimpsonsRule");
 char *fake = N_("How many iterations to try for InfiniteSum and InfiniteProduct");
 char *fake = N_("How many successive steps to be within tolerance for InfiniteSum and InfiniteProduct");
 char *fake = N_("Tolerance for InfiniteSum and InfiniteProduct");
@@ -184,7 +184,8 @@ char *fake = N_("Stirling number of the second kind");
 char *fake = N_("Subfactorial: n! times sum_{k=0}^n (-1)^k/k!");
 char *fake = N_("Calculate the nth triangular number");
 char *fake = N_("Calculate permutations");
-char *fake = N_("Use adaptive composite Gauss-Kronrod (K15, G7) rule until error estimate is less than AdaptiveGaussKronrodAbsoluteTolerance and AdaptiveGaussKronrodRelativeTolerance up to AdaptiveGaussKronrodMaxIterations times, if unsuccessful returns null");
+char *fake = N_("Use adaptive composite Gauss-Kronrod (K15, G7) rule until error estimate is less than AdaptiveGaussKronrodAbsoluteTolerance and AdaptiveGaussKronrodRelativeTolerance times the value up to AdaptiveGaussKronrodMaxIterations times, if unsuccessful returns null");
+char *fake = N_("Integration by Composite Simpson's Rule of function given as a vector of values on equally spaced subintervals over an interval of length len, data f should have 3 or more values");
 char *fake = N_("Integration of f by Composite Simpson's Rule on the interval [a,b] with the number of steps calculated by the fourth derivative bound and the desired tolerance");
 char *fake = N_("Attempt to calculate derivative by trying first symbolically and then numerically");
 char *fake = N_("Return a function which is the even periodic extension of f defined on the interval [0,L]");
