@@ -1,17 +1,19 @@
 Changes to 1.0.28
 
 * Implement an adaptive Gauss-Kronrod integration and make it default
-  for NumericalIntegral (adds AdaptiveGaussKronrod and GaussKronrodRule,
-  and related parameters)
+  for NumericalIntegral.  Adds functions AdaptiveGaussKronrod and
+  GaussKronrodRule, and related parameters.
 * SYNTAX: Don't special case parsing -<number>^n it will be parsed now
   as -(<number>^n) as it should be.  So -1^2 is now -1 as is only reasonable.
-  Not sure what originally possesed me to parse it as it did, but it recently bit
-  me because it makes no sense whatsoever.
-* Add midpoint, trapezoid, and left-hand rule graphical examples with showing
+  Not sure what originally possesed me to parse it as it did, but it recently
+  bit me because it makes no sense whatsoever.
+* Add midpoint, trapezoid, and left-hand rule graphical examples showing
+  the rectangles.
 * Improve the Euler method exponential example
 * Fix drawing points in postscript/PDF
 * Allow graphing of constants (functions with no arguments)
-* Add TrapezoidRule, LeftHandRule, RightHandRule functions
+* Add CompositeSimpsonsRuleData, TrapezoidRule, LeftHandRule, RightHandRule
+  functions
 * Fix a few compile warnings
 * Few minor bug fixes
 
