@@ -1,3 +1,10 @@
+Thu Feb 19 18:11:21 2026  Jiri (George) Lebl <jiri.lebl@gmail.com>
+
+	* lib/calculus/integration.gel: Implement CompositeSimpsonsRuleData
+	  and some fixes to strings
+	
+	* help/C/genius.xml: updates to docs.
+
 Thu Feb 19 15:38:03 2026  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/eval.[ch], src/calc.c: Remove the special casing of -<number>^n
